apps/base/home-mosquitto/deploy/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
      app.kubernetes.io/component: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
        app.kubernetes.io/component: mosquitto
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1883 # mosquitto
        fsGroup: 1883
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: mosquitto
        image: "registry.lan/mosquitto:2.1.2-alpine"
        imagePullPolicy: IfNotPresent     
        ports:
        - containerPort: 1883
          name: mqtt
        - containerPort: 8883
          name: mqtts
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - mosquitto_sub -u ${HEALTHCHECK_USER} -P ${HEALTHCHECK_PASSWORD} -t '$SYS/broker/uptime' -C 1 | grep second
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: mosquitto-config
          mountPath: /mosquitto/config/
        - name: certs-volume
          mountPath: /etc/ssl/mqtt
        - name: mosquitto-data
          mountPath: /mosquitto/data
          subPath: data
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: mosquitto-data
        persistentVolumeClaim:
          claimName: mosquitto-data
      - name: mosquitto-config
        configMap:
          name: mosquitto-config
      - name: certs-volume
        secret:
          secretName: mosquitto-certs
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
