apps/base/home-mosquitto/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  ports:
  - port: 1883
    name: mqtt
  - port: 8883
    name: mqtts
  selector:
    app.kubernetes.io/name: mosquitto
    app.kubernetes.io/component: mosquitto
