apps/base/home-mosquitto/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-mosquitto
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
      app.kubernetes.io/component: mosquitto

  ingress:
    - ports:
        - port: mqtt
        - port: mqtts
      from:
        # Allow from test pods
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mosquitto
              app.kubernetes.io/component: test

        # Allow from the ingress controller
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
        
        # Allow from homeassistant
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-homeassistant
          podSelector:
            matchLabels:
              app.kubernetes.io/name: homeassistant
              app.kubernetes.io/component: homeassistant

        # Allow from roomassistant
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-roomassistant
          podSelector:
            matchLabels:
              app.kubernetes.io/name: roomassistant
              app.kubernetes.io/component: roomassistant

        # Allow from zigbee2mqtt
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-zigbee2mqtt
          podSelector:
            matchLabels:
              app.kubernetes.io/name: zigbee2mqtt
              app.kubernetes.io/component: zigbee2mqtt

        # Allow from frigate
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-frigate
          podSelector:
            matchLabels:
              app.kubernetes.io/name: frigate
              app.kubernetes.io/component: frigate
